Ticket #15067 (closed defect: fixed)

Opened 4 months ago

Last modified 4 months ago

LoadURL vs LoadUrl - case inconsistency between code and some docs

Reported by: zostaf Owned by:
Priority: low Milestone: 2.9.5
Component: WebView Version:
Keywords: loadurl documentation Cc:
Blocked By: Patch: no
Blocking:

Description

In several documentation i've seen
in class: WebView
method: LoadURL()

While the actual method is LoadURL()

It appears in several places.
In some places the docs contains 2 versions of the name, capital/lowercase and so should be fixed.

 http://docs.wxwidgets.org/trunk/classwx_web_view.html
 http://wxpython.org/Phoenix/docs/html/html2.WebView.html
 http://wiki.wxpython.org/wxGTKWebKit

(Maybe to inconsistency is due to differences between webkit / gtk / IE ?)

Change History

Changed 4 months ago by steve_lamerton

  • status changed from new to confirmed

Thanks for reporting, I could only find one incorrect mention in the docs so I'll commit a fix shortly. Please let me know if I missed any.

The wxGTKWebKit control is entirely separate to wxWebView and not part of core wxWidgets which is why it has a different name.

Changed 4 months ago by SJL

  • status changed from confirmed to closed
  • resolution set to fixed

(In [73570]) Minor change. Fix LoadURL case typo in wxWebView docs.

Closes #15067

Note: See TracTickets for help on using tickets.