Minor change. Fix LoadURL case typo in wxWebView docs.

Closes #15067

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73570 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775